--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,7 +20,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    
+      - name: Check Out Repo 
+        uses: actions/checkout@v2
+        
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -32,7 +34,12 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}          
+      
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
